--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,17 @@ body {
   font-family: "Roboto", sans-serif;
   box-sizing: border-box;
 }
+tspan{
+  fill: white;
+}
+line{
+  stroke: white !important;
 
+}
+.MuiChartsLegend-mark{
+ rx:100%;
+ ry:100%;
+}
 a {
   color: inherit;
   text-decoration: none;
